test/classes/errors/nilability-init-var/init-var-oknil-shared-from-oknil-unmanaged.good
init-var-oknil-shared-from-oknil-unmanaged.chpl:9: error: cannot assign to a shared variable from an unmanaged class
